--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -5,5 +5,6 @@
   "documentation": "Documentation",
   "others": "Others",
   "roadmap": "Roadmap",
-  "hilo": "Hilo"
+  "hilo": "Hilo",
+  "tower": "Tower"
 }
